fixed overflow on mobile and tablet devices

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -214,6 +214,7 @@
 
 @media (max-width: 768px) {
   .header .header-hero {
+    max-width: 100%;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: auto auto;
     grid-template-areas:
